--- a/public/m01/index.html
+++ b/public/m01/index.html
@@ -9,11 +9,13 @@
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="assets/fontAwesome/css/font-awesome.min.css">
     <script src="assets/mui/js/mui.min.js"></script>
+    <script src="assets/zepto/zepto.min.js"></script>
+    <script src="js/public.js"></script>
 </head>
 <body>
 <header class="mui-bar mui-bar-nav my-header">
     <h1 class="mui-title">乐淘云购</h1>
-    <a class="mui-icon mui-icon-search mui-pull-right"></a>
+    <a class="mui-icon mui-icon-search mui-pull-right" href="search.html"></a>
 </header>
 <nav class="mui-bar mui-bar-tab my-footer">
     <a class="mui-tab-item mui-active" href="index.html">
